compiling_error.txt
In file included from /usr/include/c++/4.8/thread:35:0,
                 from /home/youngjoo/2018-1-OSSP-Active-12/helpers.h:8,
                 from /home/youngjoo/2018-1-OSSP-Active-12/game_states.h:1,
                 from /home/youngjoo/2018-1-OSSP-Active-12/main.cpp:1:
/usr/include/c++/4.8/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support for the \
  ^
